2007-10-30  Markus Deuling  <deuling@de.ibm.com>

	* libunwind-frame.c (libunwind_frame_sniffer)
	libunwind_frame_prev_register, libunwind_sigtramp_frame_sniffer)
	(libunwind_frame_cache): Use get_frame_arch to get at the current
	architecture by frame_info.
	(libunwind_get_reg_special): Replace current_gdbarch by gdbarch.

2007-10-30  Markus Deuling  <deuling@de.ibm.com>

	* iq2000-tdep.c (iq2000_frame_prev_register): Use get_frame_arch to get
	at the current architecture by frame_info.

2007-10-30  Markus Deuling  <deuling@de.ibm.com>

	* inf-child.c (inf_child_fetch_inferior_registers): Use 
	get_regcache_arch to get at the current architecture by regcache.

2007-10-30  Markus Deuling  <deuling@de.ibm.com>

	* inf-ptrace.c (inf_ptrace_fetch_registers)
	(inf_ptrace_fetch_register, inf_ptrace_store_register)
	(inf_ptrace_store_registers): Use get_regcache_arch to get at the
	current architecture by regcache.

2007-10-30  Markus Deuling  <deuling@de.ibm.com>

	* hpux-thread.c (hpux_thread_fetch_registers)
	(hpux_thread_store_registers): Use get_regcache_arch to get at the
	current architecture by regcache.

2007-10-30  Markus Deuling  <deuling@de.ibm.com>

	* hppa-tdep.c (hppa_frame_cache): Use get_frame_arch to get at the
	current architecture by frame_info.

2007-10-30  Markus Deuling  <deuling@de.ibm.com>

	* go32-nat.c (fetch_register, go32_fetch_registers, store_register)
	(go32_store_registers): Use get_regcache_arch to get at the current
	architecture by regcache.

2007-10-30  Markus Deuling  <deuling@de.ibm.com>

	* gdbtypes.c (gdbtypes_post_init): Replace current_gdbarch by gdbarch.

2007-10-30  Markus Deuling  <deuling@de.ibm.com>

	* frv-linux-tdep.c (frv_linux_sigtramp_frame_cache): Use get_frame_arch
	to get at the current architecture by frame_info.

2007-10-30  Markus Deuling  <deuling@de.ibm.com>

	* f-lang.c (build_fortran_types): Replace current_gdbarch by gdbarch.

2007-10-30  Markus Deuling  <deuling@de.ibm.com>
