@@ -1,3 +1,8 @@
+2007-10-31  Markus Deuling  <deuling@de.ibm.com>
+
+	* arm-linux-nat.c (fetch_register, fetch_regs): Use get_regcache_arch
+	to get at the current architecture by regcache.
+
 2007-10-30  Markus Deuling  <deuling@de.ibm.com>
 
 	* libunwind-frame.c (libunwind_frame_sniffer)
